# flower

./: AGENTS.md
.github/workflows/: framework-e2e.yml  framework-test.yml
baselines/docs/source/: conf.py
baselines/ghbm/: README.md  pyproject.toml
baselines/ghbm/ghbm/: __init__.py  algorithm.py  client_app.py  config.py  dataset.py  model.py  server_app.py  strategy.py  trainer.py  utils.py
baselines/ghbm/scripts/: run_cifar10_noniid_fedavg.sh  run_cifar10_noniid_fedcm.sh  run_cifar10_noniid_fedhbm.sh  run_cifar10_noniid_ghbm.sh  run_cifar10_noniid_localghbm.sh
baselines/verifiableagg/: README.md  pyproject.toml
baselines/verifiableagg/verifiableagg/: client_app.py  reporting.py  server_app.py  strategy.py
datasets/: pyproject.toml
dev/: pyproject.toml
examples/advanced-pytorch/: README.md  pyproject.toml
examples/custom-mods/: pyproject.toml
examples/docs/source/: conf.py
examples/embedded-devices/: pyproject.toml
examples/fed-omop/: README.md  pyproject.toml
examples/fed-omop/fedomop/: dataset.py  result_visualization.py  server_app.py  task_utils.py
examples/federated-analytics/: pyproject.toml
examples/federated-kaplan-meier-fitter/: pyproject.toml
examples/federated-vae/: pyproject.toml
examples/fedrag/: pyproject.toml
examples/fl-dp-sa/: pyproject.toml
examples/fl-tabular/: pyproject.toml
examples/flower-secure-aggregation/: README.md  pyproject.toml
examples/flower-simulation-step-by-step-pytorch/my-awesome-app/: pyproject.toml
examples/flowertune-llm/: README.md  pyproject.toml
examples/flowertune-llm-code/: README.md  pyproject.toml
examples/flowertune-llm-finance/: README.md  pyproject.toml
examples/flowertune-llm-general-nlp/: README.md  pyproject.toml
examples/flowertune-llm-medical/: README.md  pyproject.toml
examples/flowertune-llm/flowertune_llm/: client_app.py  dataset.py  fedavgstreaming.py  server_app.py  task.py
examples/flowertune-llm/flowertune_llm/templates/: flux_train.sh.j2  torchtitan.toml.j2
examples/flowertune-vit/: README.md  pyproject.toml
examples/opacus/: pyproject.toml
examples/quickstart-catboost/: pyproject.toml
examples/quickstart-cpp/: CMakeLists.txt  Dockerfile  README.md  client.py  docker-compose.yml  pyproject.toml
examples/quickstart-cpp/src/: main.cc
examples/quickstart-fastai/: pyproject.toml
examples/quickstart-huggingface/: README.md  pyproject.toml
examples/quickstart-jax/: pyproject.toml
examples/quickstart-lerobot/: pyproject.toml
examples/quickstart-mlx/: pyproject.toml
examples/quickstart-monai/: README.md  pyproject.toml
examples/quickstart-numpy/: pyproject.toml
examples/quickstart-pandas/: pyproject.toml
examples/quickstart-pennylane/: pyproject.toml
examples/quickstart-pytorch/: pyproject.toml
examples/quickstart-pytorch-lightning/: pyproject.toml
examples/quickstart-sklearn/: pyproject.toml
examples/quickstart-tensorflow/: pyproject.toml
examples/quickstart-xgboost/: pyproject.toml
examples/supernode-authentication/: pyproject.toml
examples/vertical-fl/: pyproject.toml
examples/whisper-federated-finetuning/: README.md  pyproject.toml
examples/xgboost-comprehensive/: pyproject.toml
framework/: pyproject.toml
framework/cc/flwr/: CMakeLists.txt
framework/cc/flwr/include/: communicator.h  grpc_rere.h  message_handler.h  serde.h  start.h  typing.h
framework/cc/flwr/src/: communicator.cc  grpc_rere.cc  message_handler.cc  serde.cc  start.cc
framework/dev/: check-migrations.sh  generate_migration.py  prepare-framework.sh  update_changelog.py
framework/docker/base/ubi/: Containerfile
framework/docs/source/: how-to-authenticate-supernodes.rst  how-to-configure-pyproject-toml.rst  how-to-run-flower-locally.rst  how-to-run-simulations.rst  how-to-upgrade-to-flower-1.28.rst  ref-api-cli.rst  ref-changelog.md  ref-faq.rst  ref-flower-configuration.rst  tutorial-quickstart-android.rst  tutorial-quickstart-fastai.rst  tutorial-quickstart-huggingface.rst  tutorial-quickstart-jax.rst  tutorial-quickstart-mlx.rst  tutorial-quickstart-pytorch-lightning.rst  tutorial-quickstart-pytorch.rst  tutorial-quickstart-scikitlearn.rst  tutorial-quickstart-tensorflow.rst  tutorial-quickstart-xgboost.rst  tutorial-series-use-a-federated-learning-strategy-pytorch.rst
framework/docs/source/helm/: how-to-deploy-superlink-using-helm.md  how-to-deploy-supernode-using-helm.md
framework/docs/source/ref-exit-codes/: 250.rst  602.rst
framework/e2e/: test_control_api.sh  test_serverapp_heartbeat.py
framework/proto/flwr/proto/: control.proto  heartbeat.proto  serverappio.proto  task.proto
framework/py/flwr/cli/: app.py  cli_test.py  profile.py  utils.py  utils_test.py
framework/py/flwr/common/: args.py  args_test.py  constant.py  logger.py  profiling.py  profiling_test.py  retry_invoker.py  runtime_version.py  runtime_version_test.py  serde.py  telemetry.py
framework/py/flwr/proto/: control_pb2.py  control_pb2.pyi  control_pb2_grpc.py  control_pb2_grpc.pyi  heartbeat_pb2.py  (+7 more)
hub/docs/source/: fab-format-version.rst  how-to-publish-app-on-hub.rst  how-to-sign-hub-apps.rst  how-to-use-app-from-hub.rst  index.rst
(+184 files in other folders)
